hacer que el administrador de clientes trabaje con un repositorio